# BSARGeom

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml  tests.yml
assets/icon/: bsargeom.icns
install/linux/: bsargeom.desktop  setup  uninstall-bsargeom
install/windows/: Install.ps1  InstallOrUninstall.bat  Uninstall.ps1
src/: bsar.rs  camera.rs  carrier.rs  constants.rs  contour.rs  coordinates.rs  download.rs  entities.rs  main.rs  raster.rs  scene.rs  textdraw.rs  ui.rs  world.rs
src/coordinates/: ellipsoid.rs  geopoint.rs
src/entities/: antenna_beam.rs  antenna_beam_footprint.rs  axes_helper.rs  carrier.rs  grid_helper.rs  iso_range_doppler_plane.rs  iso_range_ellipsoid.rs  lines.rs  velocity_indicator.rs  velocity_vector.rs
src/ui/: app.rs  carrier_ui.rs  gaf.rs  infos.rs  menu.rs  rx_panel.rs  rx_ui.rs  tx_panel.rs  tx_ui.rs  ui_plugin.rs
web/: index.html
xtask/: Cargo.toml  build.rs
xtask-win-installer/: Cargo.toml  build.rs
xtask-win-installer/src/: main.rs
xtask/src/: linux.rs  macos.rs  main.rs  windows.rs
