[package]
name = "bsargeom"
version = "1.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.19"
default-features = false
# Fine-grained features kept on purpose: the curated collections ("3d", "3d_api",
# "common_api", ...) all pull subsystems this app doesn't use (gltf, picking, scene,
# gamepad, text/fonts, clipboard, animation) and would grow the wasm binary.
# Both Linux windowing backends are enabled: winit picks Wayland when a compositor
# is present and falls back to X11 otherwise, so a single binary is sharp on
# HiDPI Wayland sessions instead of going through XWayland. `winit/wayland` uses
# the pure-Rust wayland stack, so this adds no system library to build or run
# (cost measured on this crate: +1.6 MiB, +3.1% of the release binary).
features = [
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_window",
    "multi_threaded",
    "tonemapping_luts",
    "sysinfo_plugin",
    "mouse",
    "keyboard",
    "webgpu",
    "x11",
    "wayland",
]

[dependencies]
# note: bevy_egui and egui_extras versions are tied to the bevy_egui version that
# bevy_panorbit_camera's "bevy_egui" feature links against. A mismatch (e.g. app on
# bevy_egui 0.41 while bevy_panorbit_camera 0.35 uses 0.40) silently duplicates the
# crate in the dependency tree and breaks camera input blocking over egui areas.
bevy_panorbit_camera = { version = "0.35", features = ["bevy_egui"] }
bevy_egui = "0.40"
egui_extras = { version = "0.34", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
# note: egui_plot's version is offset from egui's — 0.35 is the release built
# against egui 0.34. Using 0.34 (egui 0.33) or 0.36 (egui 0.35) silently
# duplicates egui in the tree, like the bevy_egui mismatch described above.
egui_plot = "0.35"

# Size optimization (see: https://github.com/johnthagen/min-sized-rust)
[profile.release]
strip = true # = "symbols" Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[profile.web-release]
inherits = "release"
strip = false # = "none" Do not strip symbols from the binary.
opt-level = "z"
