[package]
name = "bsargeom"
version = "1.3.0"
edition = "2024"

# The app lives at the repo root; `xtask` (packaging) and `xtask-win-installer`
# (the embedded Windows .exe installer) are helper crates. `default-members`
# keeps a plain `cargo build`/`cargo run` building ONLY the app — the installer
# crates build on demand via the `cargo xtask` alias (see .cargo/config.toml).
# The app version above stays the single source of truth: xtask reads it from
# this file (see xtask/build.rs), so there is nothing to keep in sync.
[workspace]
members = ["xtask", "xtask-win-installer"]
default-members = ["."]

[dependencies.bevy]
version = "0.19"
default-features = false
# Fine-grained features kept on purpose: the curated collections ("3d", "3d_api",
# "common_api", ...) all pull subsystems this app doesn't use (gltf, picking, scene,
# gamepad, text/fonts, clipboard, animation) and would grow the wasm binary.
# Both Linux windowing backends are enabled: winit picks Wayland when a compositor
# is present and falls back to X11 otherwise, so a single binary is sharp on
# HiDPI Wayland sessions instead of going through XWayland. `winit/wayland` uses
# the pure-Rust wayland stack, so this adds no system library to build or run
# (cost measured on this crate: +1.6 MiB, +3.1% of the release binary).
features = [
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_window",
    "multi_threaded",
    "tonemapping_luts",
    "sysinfo_plugin",
    "mouse",
    "keyboard",
    "webgpu",
    "x11",
    "wayland",
]

[dependencies]
# note: bevy_egui and egui_extras versions are tied to the bevy_egui version that
# bevy_panorbit_camera's "bevy_egui" feature links against. A mismatch (e.g. app on
# bevy_egui 0.41 while bevy_panorbit_camera 0.35 uses 0.40) silently duplicates the
# crate in the dependency tree and breaks camera input blocking over egui areas.
bevy_panorbit_camera = { version = "0.35", features = ["bevy_egui"] }
bevy_egui = "0.40"
egui_extras = { version = "0.34", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
# note: egui_plot's version is offset from egui's — 0.35 is the release built
# against egui 0.34. Using 0.34 (egui 0.33) or 0.36 (egui 0.35) silently
# duplicates egui in the tree, like the bevy_egui mismatch described above.
egui_plot = "0.35"
png = "0.18"

# Native-only: the in-app "save as" dialog. Its version is offset from egui's —
# 0.13 is the release built against egui 0.34; 0.12 pulls egui 0.33 and 0.14
# pulls egui 0.35, either of which silently duplicates egui in the tree (the
# same trap as the bevy_egui/egui_plot pins above).
#
# `winit` is used only to set the window icon at runtime (see src/main.rs). It is
# pinned to the same 0.30 line bevy_winit links against so cargo unifies them to
# a single crate — a mismatch would put two winit versions in the tree and the
# `WINIT_WINDOWS` handle type would no longer match `winit::window::Icon`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-file-dialog = "0.13"
winit = "0.30"

# Windows-only: embed the application icon (and version info) into bsargeom.exe
# so it shows in Explorer and the taskbar. `build.rs` no-ops on other targets.
[build-dependencies]
embed-resource = "3"

# Web-only: the browser has no filesystem, so saving an image goes through a
# Blob + download link (see src/download.rs). Native builds pull none of this.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "Url", "Document", "Window", "HtmlAnchorElement", "Element", "HtmlElement"] }

# Size optimization (see: https://github.com/johnthagen/min-sized-rust)
[profile.release]
strip = true # = "symbols" Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[profile.web-release]
inherits = "release"
strip = false # = "none" Do not strip symbols from the binary.
opt-level = "z"
